--- a/a 标签/index.html
+++ b/a 标签/index.html
@@ -1,52 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        p {
-            font-weight: bold;
-        }
-
-        a:link {
-            color: forestgreen;
-            text-decoration-color: hotpink;
-        }
-
-        a:hover {
-            color: yellow
+        a:link{
+            color: green;
         }
         a:visited{
-            color: aqua;
+            color: aquamarine;
+        }
+        a:hover{
+            color: gold;
+            /* color: black; */
         }
         a:active{
             color: black;
         }
+     
+     
     </style>
 </head>
-<!-- link hover active visited -->
-<body>
-    <p>Pages that you might have visited:</p>
-    <ul>
-        <li>
-            <a href="https://developer.mozilla.org">MDN Web Docs</a>
-        </li>
-        <li>
-            <a href="https://www.youtube.com/">YouTube</a>
-        </li>
-    </ul>
-    <p>Pages unlikely to be in your history:</p>
-    <ul>
-        <li>
-            <a href="https://developer.mozilla.org/missing-2">Random MDN page</a>
-        </li>
-        <li>
-            <a href="https://example.com/missing-2">Random Example page</a>
-        </li>
-    </ul>
-
+<body>  
+    <!-- a 标签的开发顺序 love hate ，不然会引起样式冲突 -->
+    <a href="https://www.baidu.com/">
+       121
+    </a>
+    <a href="https://www.bai121du.com/">
+        112
+     </a>
 </body>
-
 </html>
