--- a/CSS 就近原则/index.html
+++ b/CSS 就近原则/index.html
@@ -1,15 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<p>q: 下面两个 div 的字体分别是什么颜色?</p>
-<div class="red blue">123</div>
-<div class="blue red">123</div>
-<style>
-    .blue {
-    color: blue
-}
-    .red {
-    color: red
-}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+ 
+    <link rel="stylesheet" href="./style.css">
+</head>
 
+<body>
+    <p>q: 下面两个 div 的字体分别是什么颜色?</p>
+    <div class="red blue green">123</div>
+    <div class="blue red green">123</div>
+    <style>
+        .blue {
+            color: blue
+        }
 
-</style>
+        .red {
+            color: red
+        }
+    </style>
+</body>
 
+</html>
